[gd_scene load_steps=9 format=3 uid="uid://b0jfg2inmke4k"]

[ext_resource type="PackedScene" uid="uid://1twv1cec0hc6" path="res://game-objects/vehicles/vehicle.tscn" id="1_adgb3"]
[ext_resource type="Script" uid="uid://fg6igepkiofx" path="res://game-objects/vehicles/bus/bus.gd" id="2_8bm15"]
[ext_resource type="PackedScene" uid="uid://cx5r114fjgwq7" path="res://game-objects/light/light.tscn" id="2_ioive"]
[ext_resource type="PackedScene" uid="uid://4kuxfxcr7jee" path="res://game-objects/vehicles/headlight/headlight.tscn" id="4_insyj"]

[sub_resource type="LabelSettings" id="LabelSettings_8bm15"]
font_size = 8
shadow_size = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_insyj"]
size = Vector2(80, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0l3b4"]
size = Vector2(68, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0wy3"]
size = Vector2(10.5, 20)

[node name="Bus" instance=ExtResource("1_adgb3")]
visible = false
script = ExtResource("2_8bm15")

[node name="Body" type="Polygon2D" parent="." index="0"]
z_index = 5
z_as_relative = false
position = Vector2(86, -44)
color = Color(1, 0.501961, 0.309804, 1)
polygon = PackedVector2Array(-108, 33, -40, 33, -40, 55, -108, 55)
uv = PackedVector2Array(-366, -51.5, 93, -54.5, 93, 77.5, -373, 79.5)

[node name="Line2D" type="Line2D" parent="Body" index="0"]
position = Vector2(12, 0)
points = PackedVector2Array(-62, 48, -57, 44, -62, 40)
width = 1.0

[node name="LeftBrakeLight" parent="Body" index="1" instance=ExtResource("2_ioive")]
position = Vector2(-108, 35)
inactive_color = Color(0.2, 0, 0, 1)
active_color = Color(1, 0, 0, 1)
backlight_energy = 15.0
ilumination_scale = 0.25

[node name="LeftRayIndicator" parent="Body" index="2" instance=ExtResource("2_ioive")]
position = Vector2(-43, 38)
inactive_color = Color(0.328363, 0.188552, 0.0617831, 1)
active_color = Color(0.993088, 0.761047, 0.36313, 1)
ilumination_scale = 0.25

[node name="RightRayIndicator" parent="Body" index="3" instance=ExtResource("2_ioive")]
position = Vector2(-43, 50)
inactive_color = Color(0.329412, 0.188235, 0.0627451, 1)
active_color = Color(0.992157, 0.760784, 0.364706, 1)
ilumination_scale = 0.25

[node name="RightBrakeLight" parent="Body" index="4" instance=ExtResource("2_ioive")]
position = Vector2(-108, 53)
inactive_color = Color(0.2, 0, 0, 1)
active_color = Color(1, 0, 0, 1)
backlight_energy = 15.0
ilumination_scale = 0.25

[node name="LongRayIndicator" parent="Body" index="5" instance=ExtResource("2_ioive")]
position = Vector2(-60, 39)
inactive_color = Color(0.0998999, 5.17646e-05, 0.34762, 1)
active_color = Color(0.602044, 0.610385, 1, 1)
ilumination_scale = 0.25

[node name="MediumRayIndicator" parent="Body" index="6" instance=ExtResource("2_ioive")]
position = Vector2(-60, 44)
inactive_color = Color(0.2, 0.364706, 0, 1)
active_color = Color(0.394249, 0.68442, 0, 1)
ilumination_scale = 0.25

[node name="CloseRayIndicator" parent="Body" index="7" instance=ExtResource("2_ioive")]
position = Vector2(-60, 49)
inactive_color = Color(0.531182, 0, 0.263433, 1)
active_color = Color(1, 0.359538, 0.595255, 1)
ilumination_scale = 0.25

[node name="LeftBeam" parent="Body" index="8" instance=ExtResource("4_insyj")]
z_index = 100
z_as_relative = false
position = Vector2(-40, 38)

[node name="RightBeam" parent="Body" index="9" instance=ExtResource("4_insyj")]
z_index = 100
z_as_relative = false
position = Vector2(-40, 50)

[node name="Label" type="Label" parent="Body" index="10"]
offset_left = -94.0
offset_top = 36.0
offset_right = -78.0
offset_bottom = 48.0
rotation = 1.5708
text = "12"
label_settings = SubResource("LabelSettings_8bm15")
horizontal_alignment = 1

[node name="CollisionArea" type="Area2D" parent="." index="1"]
collision_layer = 6
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="CollisionArea" index="0"]
position = Vector2(4, 0.5)
shape = SubResource("RectangleShape2D_insyj")
disabled = true

[node name="CloseRayCaster" type="RayCast2D" parent="." index="2"]
position = Vector2(46, 0)
enabled = false
exclude_parent = false
target_position = Vector2(11, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="MediumRayCaster" type="RayCast2D" parent="." index="3"]
position = Vector2(46, 0)
enabled = false
exclude_parent = false
target_position = Vector2(36, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="LongRayCaster" type="RayCast2D" parent="." index="4"]
position = Vector2(46, 0)
enabled = false
exclude_parent = false
target_position = Vector2(71, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRayCaster" type="RayCast2D" parent="." index="5"]
position = Vector2(46, 0)
enabled = false
exclude_parent = false
target_position = Vector2(45, -13)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RightRayCaster" type="RayCast2D" parent="." index="6"]
position = Vector2(46, 0)
enabled = false
exclude_parent = false
target_position = Vector2(44, 15)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="BodyArea" type="Area2D" parent="." index="7"]
monitoring = false
monitorable = false

[node name="BodyShape" type="CollisionShape2D" parent="BodyArea" index="0"]
position = Vector2(12, 0)
shape = SubResource("RectangleShape2D_0l3b4")

[node name="ForwardBlockadeObserver" type="Area2D" parent="." index="8"]
position = Vector2(30, 0)
collision_layer = 4
collision_mask = 4
input_pickable = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForwardBlockadeObserver" index="0"]
position = Vector2(21.75, 0)
shape = SubResource("RectangleShape2D_s0wy3")

[node name="PathFollower" type="PathFollow2D" parent="." index="9"]
loop = false
